--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 07.02.2025 13:43:42 | Praha: 5°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 08.02.2025 06:03:00 | Praha: 2°C, Polojasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cibulový krém s krutony</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty, ale můžete zaplatit bezkontaktně přes Qerko. Děkujeme za pochopení</h5><tr><td class="menuWeight"></td><td class="menuName">Polévky</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Brokolicový krém se zakysanou smetanou a krutony</td><td class="menuPrice">45,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Náš burger s trhaným vepřovým masem, česnekovým dresinkem, okurkou, tomaty a saláty, smažené bramborové hranolky, tatarka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cikánská hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová krkovice na houbové omáčce, dušená jasmínová rýže</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí nudličky na paprice, těstoviny vřetena</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Sýrové grusetky ve smetanové omáčce se sušenými tomaty, fazolovými lusky, karotkou a vepřovou panenkou, rukola</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%) , vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">166,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné sýrové omáčce, smažené krokety</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové kotlety bez kosti, restovaná anglická slanina s fazolovými lusky, pečené brambory s plátky česneku</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou promíchaný olivovým dresinkem, smažené kuřecí stripsy, vařené vejce</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight">ÚNOR</td><td class="menuName">Oslavte s námi v Šenkýrnách "Mokrej únor 2025"   Po celý únor neomezeně pro všechny 0,5L tankový ležák 11° Staropramen za 36,-Kč, Finlandia vodka 0,04L za 27,-Kč, super ceny plechovkových piv a jiné...  </td><td class="menuPrice">ÚNOR</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,- Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,- Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Albín ALlk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">0,3L Citronáda 27,-      0,5L Citronáda 34,-</td><td class="menuPrice"></td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">180g Smažené holandské řízky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, šlehačka, brusinky</td><td class="menuPrice">175,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové rizoto s klobásou a hráškem, strouhaný sýr, kyselá okurka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">1ks</td><td class="menuName">Kynutý koláč s naší banánovou marmeládou, tvarohem a meruňkou</td><td class="menuPrice">25,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Dorůžova pečená vepřová panenka, květákové pyré s máslem, grilovaná zelenina sypaná parmazánem</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusilli Arabiata s česnekem a anglickou slaninou v tomatové omáčce, filírovaná vepřová panenka, strouhaný parmazán</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou zapečený třemi druhy sýrů, smažené hranolky</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Náš vepřový burger s mexickým dresinkem, salátem, rajčaty, šunkou a sýrem, hranolky, tatarka</td><td class="menuPrice">187,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové kotlety bez kosti na jemné hříbkové omáčce, máslové restované špecle</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Únor</td><td class="menuName">Oslavte s námi v Šenkýrnách "Mokrej únor 2025"   Po celý únor neomezeně pro všechny 0,5L tankový ležák 11° Staropramen za 36,-Kč, Finlandia vodka 0,04L za 27,-Kč, super ceny plechovkových piv a jiné...  </td><td class="menuPrice">Únor</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Oslav s námi 20-ti leté výročí spolupráce s pivovarem Staropramen bezkonkurenčními cenami plechovkových piv. Ceny od 12,90 do 15,90 jsou platné 9.12. - 29.12.2024</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Citronáda</td><td class="menuPrice">27,- / 34,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -29,7 +23,13 @@
 <script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+Volba Sládků<br>
+Kozel tmavý<br>
+Cider Kingswood<br>
+<br>
+Letní zahrada<br>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -39,39 +39,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Pátek 7.2.2025 </div>
+<div class="nadpis">Sobota 8.2.2025 </div>
 <ul>
-<span class="popup-gallery"><li class="polevka">
-<div class="polozka">Hrachová polévka s uzeným masem 1</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>200g Pečená kuřecí kapsa, plněná šunkou a sýrem, bramborová kaše, okurkový salát 7</div>
-<div class="cena">175 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>1 ks Pečené králičí stehno na slanině, smetanový špenát, domácí bramborové válečky 1, 3, 7</div>
-<div class="cena">185 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>150g Jelení kýta na smetaně, špekové knedlíky, brusinkový terč 1, 3, 7, 9, 10</div>
-<div class="cena">185 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>350g Špagety aglio ollio s čerstvou chilli papričkou a plátky parmazánu. 1, 7</div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>Meruňkový nákyp s ovocnou omáčkou 1, 3, 7</div>
-<div class="cena">80 Kč</div>
-<div class="clear"></div>
-</li>
-</span> </ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -82,33 +52,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 7.2.2025 </div>
+<div class="nadpis">Sobota 8.2.2025 </div>
 <ul>
-<span class="popup-gallery"><li class="polevka">
-<div class="polozka">Dršťková</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>300g Zeleninová Musaka</div>
-<div class="cena">150 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>300g srbské rizoto sypané sýrem, kyselá okurka</div>
-<div class="cena">150 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Zeleninový salát s roastbeefem</div>
-<div class="cena">150 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>Změna jídelníčku vyhrazena</div>
-<div class="clear"></div>
-</li>
-</span> </ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -146,7 +92,7 @@ None
 <section id="CSAntal"></section><a href="#top">&#x1F51D;</a><tr><th>ČS Antal<br><a href="https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/">https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/</a></th></tr>
 <tr>
 <td>
-<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Mrkvová se zázvorem</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Pražská vepřová kýta, houskové knedlíky</td><td>155 Kč</td></tr><tr><td>300g Pečená paprika plněná fazolemi a sýrem čedar, Elote - mexická grilovaná kukuřice</td><td>115 Kč</td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
+<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Květáková</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Hovězí pečeně, svíčková omáčka, houskové knedlíky, brusinky</td><td>170 Kč</td></tr><tr><td>150g Smažený kuřecí Cordon Blue, bramborová kaše</td><td>154 Kč</td></tr><tr><td>200g Steak z krkovice v teriyaki marinádě, pečené americké brambory, wasabi majonéza</td><td>169 Kč</td></tr><tr><td>150g Houbová smaženice, kvasový chléb</td><td>115 Kč</td></tr><tr><td><h3>Polední menu</h3></td><td>125 Kč</td></tr><tr><td>Květáková</td><td> </td></tr><tr><td>150g Houbová smaženice, kvasový chléb</td><td> </td></tr><tr><td><h3>Buffet samoobslužný na váhu</h3></td><td> </td></tr><tr><td>Cizrnová chana masala</td><td> </td></tr><tr><td>Houbové kari s hráškem a koriandrem</td><td> </td></tr><tr><td>Kokosový Dhál</td><td> </td></tr><tr><td>Mrkvové Byriami s jogurtem</td><td> </td></tr><tr><td>Kuřecí stehno Tandoori v jogurtu</td><td> </td></tr><tr><td>Basmati rýže</td><td> </td></tr><tr><td><h3>Týdenní nabídka</h3></td><td> </td></tr><tr><td>Live cooking ve woku</td><td> </td></tr><tr><td>domácí těstoviny 150g / 300g:</td><td> </td></tr><tr><td>Pomodoro (rajčata, olivový olej, bazalka, česnek) strouhaný parmezán</td><td>145 Kč</td></tr><tr><td>Fit 150g / 300g:</td><td> </td></tr><tr><td>Udon nudle s restovanou zeleninou a tofu a smaženou cibulkou</td><td>155 Kč</td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
 </td>
 </tr>
 </table>
